[package]
name = "android-example"
version = "0.1.0"
edition = "2021"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35
max_sdk_version = 35

[lib]
crate-type = ["cdylib"]
path = "../exam.rs"

[dependencies.cache-dir]
path = "../.."

[dependencies]
mobile-entry-point = "0.1.1"
ndk-glue = "0.7.0"
